rewrite scoremanager writing\loading using Stream API