@@ -2,11 +2,11 @@ package com.github.ggnmstr.tanks.util;
 
 import java.io.*;
 import java.nio.file.Files;
-import java.nio.file.OpenOption;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ScoreManager {
 
@@ -14,12 +14,12 @@ public class ScoreManager {
 
     private static ScoreManager instance;
 
-    private ScoreManager(){
+    private ScoreManager() {
         this.highScores = loadScores();
     }
 
-    public static ScoreManager getInstance(){
-        if (instance == null){
+    public static ScoreManager getInstance() {
+        if (instance == null) {
             instance = new ScoreManager();
         }
         return instance;
@@ -34,8 +34,8 @@ public class ScoreManager {
             i++;
         }
         if (i <= 9) {
-            Score newscore = new Score(name,score);
-            highScores.add(i,newscore);
+            Score newscore = new Score(name, score);
+            highScores.add(i, newscore);
             if (highScores.size() >= 11) highScores.remove(10);
         }
     }
@@ -47,12 +47,10 @@ public class ScoreManager {
     public void saveToFile() {
         Path filePath = Path.of("scores.txt");
         try {
-            Files.write(filePath,"".getBytes(), StandardOpenOption.CREATE);
-            for (Score entry : highScores) {
-                String line = entry.playerName() + " : " + entry.value() + "\n";
-                // CR: merge into one write using stream
-                Files.writeString(filePath, line, StandardOpenOption.APPEND);
-            }
+            String line = highScores.stream()
+                    .map(entry -> entry.playerName() + " : " + entry.value())
+                    .collect(Collectors.joining("\n"));
+            Files.writeString(filePath, line, StandardOpenOption.WRITE);
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -67,14 +65,10 @@ public class ScoreManager {
                 return loadedScores;
             }
             List<String> lines = Files.readAllLines(filePath);
-            // CR: stream
-            for (String line : lines) {
-                String[] parts = line.split(" : ");
-                String playerName = parts[0];
-                int value = Integer.parseInt(parts[1]);
-                Score score = new Score(playerName, value);
-                loadedScores.add(score);
-            }
+            lines.stream()
+                    .map(line -> line.split(" : "))
+                    .map(parts -> new Score(parts[0], Integer.parseInt(parts[1])))
+                    .forEach(loadedScores::add);
         } catch (IOException e) {
             e.printStackTrace();
         }
